dark mode color change, fixes #4

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -3,3 +3,7 @@
     height: 100%;
     /*background-color: aqua;*/
 }
+
+.loading .mapboxgl-canvas-container {
+    cursor: progress !important;
+}
